syntax = "proto3";
package confio.poe.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmwasm/wasm/v1beta1/genesis.proto";

option go_package = "github.com/confio/tgrade/x/poe/types";

// GenesisState - initial state of module
message GenesisState {
  // gen_txs defines the genesis transactions.
  repeated bytes gen_txs = 1 [
    (gogoproto.casttype) = "encoding/json.RawMessage",
    (gogoproto.jsontag) = "gentxs",
    (gogoproto.moretags) = "yaml:\"gentxs\""
  ];

  string system_admin_addr = 2;

  string staking_contract_addr = 3;
  string valset_contract_addr = 4;
  string engagement_contract_addr = 5;
  string mixer_contract_addr = 6;

  repeated TG4Members engagement = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "engagement,omitempty"
  ];
}

message TG4Members {
  string address = 1 [(gogoproto.jsontag) = "json"];
  uint64 weight = 2 [(gogoproto.jsontag) = "weight"];
}
